k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-app-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.global-static-ip-name: "my-app-static-ip"
    networking.gke.io/managed-certificates: "my-app-managed-cert" 
    ingress.gcp.kubernetes.io/pre-shared-cert: "my-app-managed-cert" 
    networking.gke.io/v1beta1.FrontendConfig: "default-redirect-frontendconfig" 

spec:
  rules:
  - host: example.com 
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 80
      - path: / 
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 5173
  - host: www.example.com 
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 5173
  tls:
    - secretName: my-app-managed-cert
